...
  useMount(() => {
    lockToPortrait();
  });

  return (
    <ImageBackground source={backgrounds.welcome} style={styles.Screen}>
      <Screen testID={'welcomeScreen'} background={'transparent'}>
        <StatusBar
          animated={true}
          barStyle="light-content"
          translucent={true} // Android. The app will draw under the status bar.
          backgroundColor="transparent" // Android. The background color of the status bar.
        />
...
            <OldButton
              isAndroidOpacity
              style={[styles.ButtonSignIn, { marginLeft: 20 }]}
              onPress={(): void => {
                navigation.navigate('AccountSignIn');
              }}
              testID={'ctaSignIn'}
            >
              <Text style={styles.ButtonSignInLabel}>{t('signIn')}</Text>
            </OldButton>
          </Flex>
          {/* Safe area bottom spacing */}
          <Flex
...
