...
                },
              ]}
              touchableStyle={{
                width: '100%',
              }}
              onPress={handleShare}
              testID={'ctaShareLink'}
            >
              <Text
                style={[st.fs18, st.tac, { color: theme.colors.secondary }]}
              >
                {t('shareLink')}
              </Text>
            </OldButton>
            <Flex style={{ minHeight: theme.spacing.xl }} />
            <Text style={[st.fs22, st.white]}  testID={'invitationCode'}>
              {t('adventureCode:adventureCode')}:{' '}
              <Text
                style={{
                  color: theme.colors.secondary,
                  paddingLeft: 20,
                  fontFamily: theme.fonts.semiBold,
...
