...
          onSubmitEditing={formik.handleSubmit}
          error={
            formik.touched.name && formik.errors.name
              ? formik.errors.name
              : null
          }
          testID={'inputName'}
        />
        <Touchable onPress={() => setShowHelp(!showHelp)}>
          <Text style={[st.offBlue, st.fs14, st.pt3, st.tac, st.ph1]}>
            {showHelp
              ? withGroup
                ? t('placeholder:whyNeedGroupName')
...
            minHeight: isKeyboardVisible ? theme.spacing.l : theme.spacing.xl,
          }}
        />
        <OldButton
          onPress={formik.handleSubmit}
          isLoading={isLoading}
          testID={'ctaContinue'}
          touchableStyle={{
            padding: theme.spacing.m,
            backgroundColor: theme.colors.white,
            borderRadius: theme.radius.xxl,
            shadowColor: 'rgba(0, 0, 0, 0.5)',
            shadowOpacity: 0.5,
...
