...
        <OldButton
          isAndroidOpacity
          style={styles.buttonCancel}
          onPress={() => {
            closeAction();
          }}
          testID={'ctaNoNotifications'}
        >
          <Text style={styles.buttonCancelLabel}>{t('noThanks')}</Text>
        </OldButton>
      </Flex>
    </Screen>
  );
...
